*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.26 ===
* Added audio pre-mixing controls.

=== 1.0.25 ===
* Updated build scripts and dependencies.

=== 1.0.24 ===
* Updated build scripts and dependencies.

=== 1.0.23 ===
* Updated build scripts and dependencies.

=== 1.0.22 ===
* Fixed compilation on modern compilers.
* Updated build scripts and dependencies.

=== 1.0.21 ===
* Added support of sidechain passed by shared memory link.
* Updated build scripts and dependencies.

=== 1.0.20 ===
* Fixed improper phase compensation between Dry and Wet channels in
  Linear Phase mode.
* Updated build scripts and dependencies.

=== 1.0.19 ===
* Updated build scripts and dependencies.

=== 1.0.18 ===
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Implemented Hold option.
* Implemented Dry/Wet balance knob.
* Updated behaviour of split editing in UI.
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Implemented automatic scale of spectrum graph switch.
* Aligned the height of the blocks in "cgroup".
* Implemented split frequency display.
* Threshold markers are now editable.
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Reduced CPU consumption for Linear Phase and Modern modes.
* Reduced the rate of the gain curve update.
* Updated build scripts and dependencies.

=== 1.0.14 ===
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Updated build scripts and dependencies.

=== 1.0.12 ===
* Implemented Stereo split mode for stereo versions of plugin.
* Implemented Linear Phase operating mode.
* Updated build scripts and dependencies.

=== 1.0.11 ===
* Fixed improper behaviour of the bypass switch.
* Updated build scripts and dependencies.

=== 1.0.10 ===
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Updated build scripts and dependencies.

=== 1.0.8 ===