@@ -1,6 +1,30 @@
 <plugin resizable="true">
 	<ui:eval id="is_sidechain" value="(ex :sc) or (ex :sc_l) or (ex :sc_r)"/>
 	
+	<!-- Control linking -->
+	<ui:for
+		id="port"
+		list="'scm'; 'sla'; 'scr'; 'scp'; 'sclc'; 'schc'; 'sclf'; 'schf'; 'bfc'; 'sce'; 'scs'; 'sscs';
+			'em'; 'ee'; 'bs'; 'bm'; 'al'; 'at'; 'rrl'; 'rt'; 'ht'; 'er'; 'kn'; 'mk'">
+		<ui:for id="i" first="0" count="8">
+			<ctl:link
+				id.1="${port}_${i}l" value.1=":${port}_${i}r"
+				id.2="${port}_${i}r" value.2=":${port}_${i}l"
+				activity=":clink" />
+		</ui:for>
+	</ui:for>
+	
+	<ui:for
+		id="port"
+		list="'cbe'; 'sf'">
+		<ui:for id="i" first="1" count="7">
+			<ctl:link
+				id.1="${port}_${i}l" value.1=":${port}_${i}r"
+				id.2="${port}_${i}r" value.2=":${port}_${i}l"
+				activity=":clink" />
+		</ui:for>
+	</ui:for>
+	
 	<vbox spacing="4">
 		<grid rows="2" cols="5" vspacing="4" hspacing="4" expand="true">
 
@@ -253,6 +277,7 @@
 					<button id="flt_r" text="labels.chan.R_ight" size="22" ui:inject="Button_right"/>
 				</hbox>
 				<void hexpand="true"/>
+				<button id="clink" ui:inject="Button_green" text="labels.chan.lr_link" />
 				<vsep pad.h="2" bg.color="bg" reduce="true"/>
 				<shmlink id="link" pad.l="2"/>
 			</hbox>
