@@ -279,6 +279,8 @@ namespace lsp
             METER_GAIN("ilm" id, "Input level meter" label, GAIN_AMP_P_24_DB), \
             METER_GAIN("olm" id, "Output level meter" label, GAIN_AMP_P_24_DB)
 
+        #define MB_LINK(id, label, alias) \
+            SWITCH(id, label, alias, 0.0f)
 
         static const port_t mb_expander_mono_ports[] =
         {
@@ -375,6 +377,7 @@ namespace lsp
             MB_EXP_SHM_LINK_STEREO,
             MB_EXP_PREMIX,
             MB_COMMON(exp_sc_lr_bands),
+            MB_LINK("clink", "Left/Right controls link", "L/R link"),
             MB_CHANNEL("_l", " Left", " L"),
             MB_CHANNEL("_r", " Right", " R"),
             MB_FFT_METERS("_l", " Left", " L"),
@@ -443,6 +446,7 @@ namespace lsp
             MB_EXP_SHM_LINK_STEREO,
             MB_EXP_PREMIX,
             MB_COMMON(exp_sc_ms_bands),
+            MB_LINK("clink", "Mid/Side controls link", "M/S link"),
             MB_CHANNEL("_m", " Mid", " M"),
             MB_CHANNEL("_s", " Side", " S"),
             MB_FFT_METERS("_m", " Mid", " M"),
@@ -603,6 +607,7 @@ namespace lsp
             MB_EXP_SHM_LINK_STEREO,
             MB_EXP_SC_PREMIX,
             MB_COMMON(exp_sc_lr_bands),
+            MB_LINK("clink", "Left/Right controls link", "L/R link"),
             MB_CHANNEL("_l", " Left", " L"),
             MB_CHANNEL("_r", " Right", " R"),
             MB_FFT_METERS("_l", " Left", " L"),
@@ -672,6 +677,7 @@ namespace lsp
             MB_EXP_SHM_LINK_STEREO,
             MB_EXP_SC_PREMIX,
             MB_COMMON(exp_sc_ms_bands),
+            MB_LINK("clink", "Mid/Side controls link", "M/S link"),
             MB_CHANNEL("_m", " Mid", " M"),
             MB_CHANNEL("_s", " Side", " S"),
             MB_FFT_METERS("_m", " Mid", " M"),
