@@ -4,6 +4,7 @@
 
 === 1.0.26 ===
 * Added audio pre-mixing controls.
+* Added left/right and mid/side linking in the UI.
 
 === 1.0.25 ===
 * Updated build scripts and dependencies.
